--- a/reinaldoClass/src/app/_auth/auth.component.html
+++ b/reinaldoClass/src/app/_auth/auth.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <!-- Modal -->
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle.displayBlock}">
+<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle.displayBlock}">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="alert {{ this.displayStyle.displayStyle }}" role="alert">
@@ -46,5 +46,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
