fixing the image css

--- a/reinaldoClass/src/app/c-sharp/c-sharp.component.html
+++ b/reinaldoClass/src/app/c-sharp/c-sharp.component.html
@@ -1,7 +1,9 @@
 <div class="main-div">
   <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" routerLink="token" >Token</a>
+      <a class="nav-link active" aria-current="page" routerLink="token"
+        >Token</a
+      >
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="http-post">Http Post</a>
@@ -17,31 +19,34 @@
     </li>
   </ul>
 
-  <div class="container">
+  <div class="container container-fluid image">
     <main>
       <div class="row">
         <div class="col-xs-12">
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button type="button" class="btn btn-outline-light" routerLink="/body">Back Home</button>
+            <button
+              type="button"
+              class="btn btn-outline-light"
+              routerLink="/body"
+            >
+              Back Home
+            </button>
           </div>
         </div>
       </div>
-      <div class="row ">
-        <div class="col-xs-12 image">
-          <h2>Everything you need to know about the C#
-          </h2>
+      <div class="row">
+        <div class="col-xs-12 local-image">
+          <h2>Everything you need to know about the C#</h2>
         </div>
         <div class="col-xs-12">
-          <div class="image">
-            <img src="./../../assets/img-C_Sharp/02_CSharp.png" alt="Arquivo Html">
+          <div class="local-image">
+            <img
+              src="./../../assets/img-C_Sharp/02_CSharp.png"
+              alt="Arquivo Html"
+            />
           </div>
         </div>
-
       </div>
-
     </main>
   </div>
-
 </div>
-
-
