--- a/reinaldoClass/src/app/app.component.css
+++ b/reinaldoClass/src/app/app.component.css
@@ -9,7 +9,7 @@
 }
 .main {
   width: 100%;
-  height: min-content;
+  height: 100vh;
 }
 
 span {
@@ -31,7 +31,7 @@ a:hover {
 
 body {
   width: 100%;
-  min-height: 88vh;
+  min-height: 100%;
   height: max-content;
   background: linear-gradient(68.15deg, #09031f 14.62%, #e0e2e6 85.61%);
   position: relative;
