--- a/reinaldoClass/src/app/c-sharp/c-sharp.component.css
+++ b/reinaldoClass/src/app/c-sharp/c-sharp.component.css
@@ -1,4 +1,3 @@
-
 .row>* {
   margin: 0 !important;
   padding: 0 !important;
@@ -22,7 +21,6 @@ a:hover{
   background: linear-gradient(68.15deg, #07389b 14.62%, #09031f 85.61%);
 
 }
-
 .container {
   width: 100%;
   margin: 0.5% auto 0.5% auto;
@@ -32,11 +30,12 @@ a:hover{
 
 main {
   background: linear-gradient(68.15deg, #0505f3 16.62%, #055160 85.61%);
-  height: 88vh;
+  height: fit-content;
   box-shadow: 0 0 25px 0.5em #9b9baca9,
     inset 0 0 25px 0.25em #17171aa9,
     inset 0 0 5em 0px #7a52e78f;
   border-radius: 10px;
+
 }
 
 
@@ -57,8 +56,8 @@ h2 {
 
 
 /* ------------------centralizando as imagens--------------------------- */
-.image {
-  height: fit-content;
+.local-image {
+  /* height: 100%; */
   display: grid;
   place-items: center;
   padding: 3%;
@@ -69,8 +68,11 @@ img {
   border-color: rgba(146, 144, 144, 0.582);
   border-style: solid ;
   box-sizing: 2px;
-  width: 65%;
+  width: 80%;
   object-fit: fill;
 
 }
+
+
+
 
