--- a/reinaldoClass/src/app/data-base/data-base.component.html
+++ b/reinaldoClass/src/app/data-base/data-base.component.html
@@ -17,7 +17,7 @@
     </li>
   </ul>
 
-  <div class="container">
+  <div class="container ">
     <main>
       <div class="row">
         <div class="col-xs-12">
@@ -26,13 +26,13 @@
           </div>
         </div>
       </div>
-      <div class="row ">
-        <div class="col-xs-12 image">
+      <div class="row container-fluid image">
+        <div class="col-xs-12">
           <h2>Everything you need to know about the DataBase
           </h2>
         </div>
-        <div class="col-xs-12">
-          <div class="image">
+        <div class="col-xs-12 ">
+          <div class="local-image">
             <img src="./../../assets/img-dataBase/database.jpg" alt="Arquivo Html">
           </div>
         </div>
