fixing modal error and modal sucess

--- a/reinaldoClass/src/app/_auth/auth.component.html
+++ b/reinaldoClass/src/app/_auth/auth.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <!-- Modal -->
-<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle.displayBlock}">
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle.displayBlock}">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="alert {{ this.displayStyle.displayStyle }}" role="alert">
@@ -36,6 +36,7 @@
         <div class="modal-body">
           <p>{{ this.localModal?.name}}</p>
           <p>{{ this.localModal?.statusText}}</p>
+      
 
         </div>
         <div class="modal-footer">
@@ -46,5 +47,5 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
