add pdf template

--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -8,10 +8,10 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="http-post">Reference_x_Object_x_Instance_x_Class</a>
     </li>
-    <!-- <li class="nav-item">
-      <a class="nav-link" routerLink="http-get">Http Get</a>
+   <li class="nav-item">
+      <a class="nav-link" routerLink="static-X-instance"> Static-x-Instance </a>
     </li>
-    <li class="nav-item">
+     <!-- <li class="nav-item">
       <a class="nav-link" routerLink="http-delete">Http Delete</a>
     </li>
     <li class="nav-item">
