--- a/tonyClass/src/app/_body/body.component.css
+++ b/tonyClass/src/app/_body/body.component.css
@@ -17,7 +17,7 @@ span {
 .image {
   width: 100%;
   height: 100vh;
-  background-image: url('./../../assets/img-body/UinKSF2ke.avif') !important;
+  background-image: url('./../../../images/BackGround/java_17.png') !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
 
