--- a/tonyClass/src/app/app.component.html
+++ b/tonyClass/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="col">
         <nav class="navbar navbar-dark bg-dark">
           <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">E-Book from Reinaldo</span>
+            <span class="navbar-brand mb-0 h1">E-Book from Tony Filho</span>
 
           </div>
         </nav>
