--- a/tonyClass/src/app/java/ooP-Part01/share-class.component.css
+++ b/tonyClass/src/app/java/ooP-Part01/share-class.component.css
@@ -45,7 +45,7 @@ h3 {
 
 }
 .col-xs-12.picture:hover {
-  background: linear-gradient(68.15deg, #d5d5f1 16.62%, #131d2c 85.61%);
+  background: linear-gradient(68.15deg, #04adf0 16.62%, #0c0c0c42 85.61%);
 
 }
 
