--- a/tonyClass/src/app/java/ooP-Part01/static-x-instance/static-x-instance.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/static-x-instance/static-x-instance.component.html
@@ -1,3 +1,4 @@
+<p>static-x-instance works!</p>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -15,16 +16,12 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h2>Reference-x-Object-x-Instance-x-Class</h2>
+      <h2>Static-x-Instance</h2>
     </div>
     <div class="col-xs-12 picture">
-      <h3>Html File</h3>
+      <h3>PDF File</h3>
       <div class="image">
-        <!-- <img
-          src="./../../../../../docs/Slides-OOP-Part-1-Inheritance-Reference-vs-Object-vs-Instance-vs-Class.pptx"
-          alt="Arquivo Html"
-        /> -->
-        <iframe src="./../../../../../docs/Reference_x_Object_x_Instance_x_Class.pdf" width="600" height="780" style="border: none;"></iframe>
+        <iframe src="./../../../../assets/docs/Static_x_ Instance_Variables.pdf" width="95%" height="900px" style="border: none;"></iframe>
       </div>
     </div>
   </div>
