Static_x_ Instance_Methods

--- a/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
@@ -1,11 +1,20 @@
+
 <div class="main-div">
   <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" routerLink="ooP-Part01"
-        >OOP-Part01</a
-      >
+      <a class="nav-link" routerLink="/java/ooP-Part01/reference-x-object-x-instance-x-class">Reference_x_Object_x_Instance_x_Class</a>
     </li>
-
+   <li class="nav-item">
+      <a class="nav-link" routerLink="/java/ooP-Part01/static-X-instance"> Static-x-Instance </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/ooP-Part01/static-X-methods">Static-x-Methods</a>
+    </li>
+    <!--
+    <li class="nav-item">
+      <a class="nav-link" routerLink="http-put">Http Put</a>
+      C:\_Java\E_Book_Class_Back_Java17\tonyClass\src\app\java
+    </li> -->
   </ul>
 
   <div class="container container-fluid image">
@@ -25,12 +34,12 @@
       </div>
       <div class="row">
         <div class="col-xs-12 local-image">
-          <h2>Java 17</h2>
+          <h2>OOP Part1 Inheritance</h2>
         </div>
         <div class="col-xs-12">
           <div class="local-image">
             <img
-              src="./../../assets/images/BackGround/Java-Development-Kit-17.jpg"
+              src="./../../../assets/images/BackGround/Inheritance.png"
               alt="Arquivo Html"
             />
           </div>
