--- a/tonyClass/src/app/java/ooP-Part01/static-x-instance/static-x-instance.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/static-x-instance/static-x-instance.component.html
@@ -1,4 +1,4 @@
-<p>static-x-instance works!</p>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -6,9 +6,9 @@
         <button
           type="button"
           class="btn btn-outline-light"
-          routerLink="/java"
+          routerLink="/java/ooP-Part01"
         >
-          Back Java
+        Back to OOP-Part01 Inheritance
         </button>
       </div>
     </div>
