--- a/tonyClass/src/app/java/ooP-Part01/static-x-instance-methods/static-x-instance-methods.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/static-x-instance-methods/static-x-instance-methods.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -7,7 +8,7 @@
           class="btn btn-outline-light"
           routerLink="/java/ooP-Part01"
         >
-          Back to OOP-Part01 Inheritance
+        Back to OOP-Part01 Inheritance
         </button>
       </div>
     </div>
@@ -15,13 +16,14 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h2>Reference-x-Object-x-Instance-x-Class</h2>
+      <h2>Static-x-Instance Methods</h2>
     </div>
     <div class="col-xs-12 picture">
       <h3>PDF File</h3>
       <div class="image">
-        <iframe src="./../../../../assets/docs/Reference_x_Object_x_Instance_x_Class.pdf" width="95%" height="900px" style="border: none;"></iframe>
+        <iframe src="./../../../../assets/docs/Static_x_ Instance_Methods.pdf" width="95%" height="900px" style="border: none;"></iframe>
       </div>
     </div>
   </div>
 </div>
+
