Pojo and  Record

--- a/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
@@ -10,6 +10,12 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/ooP-Part01/static-X-methods">Static-x-Methods</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/ooP-Part01/pojo">Pojo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/ooP-Part01/record">Record</a>
+    </li>
     <!--
     <li class="nav-item">
       <a class="nav-link" routerLink="http-put">Http Put</a>
