--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -5,6 +5,11 @@
         >OOP-Part01</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" routerLink="inheritance"
+        >Inheritance</a
+      >
+    </li>
 
   </ul>
 
