--- a/tonyClass/src/app/java/inheritance/inheritance.component.html
+++ b/tonyClass/src/app/java/inheritance/inheritance.component.html
@@ -1,9 +1,9 @@
 
 <div class="main-div">
-    <ul class="nav justify-content-end">
-     
-     <li class="nav-item">
-        <a class="nav-link">Inheritance</a>
+    <ul class="nav justify-content-end">   
+    
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/part01">Inheritance Part01</a>
     </li>
      
    
