--- a/tonyClass/src/app/java/inheritance/part01/part01.component.html
+++ b/tonyClass/src/app/java/inheritance/part01/part01.component.html
@@ -16,7 +16,7 @@
         <div class="col-xs-12 picture">
             <h3>PDF File</h3>
             <div class="image">
-                <iframe src="./../../../../assets/docs/The_POJO.pdf" width="95%" height="900px"
+                <iframe src="./../../../../assets/docs/The_Inheritance.pdf" width="95%" height="900px"
                     style="border: none;"></iframe>
             </div>
             <h3>JAVA Files</h3>
