--- a/tonyClass/src/app/java/inheritance/inheritance.component.html
+++ b/tonyClass/src/app/java/inheritance/inheritance.component.html
@@ -5,6 +5,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/inheritance/part01">Inheritance Part01</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/part02">Inheritance Part02</a>
+    </li>
      
    
     </ul>
