--- a/tonyClass/src/app/java/inheritance/inheritance.component.html
+++ b/tonyClass/src/app/java/inheritance/inheritance.component.html
@@ -8,6 +8,12 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/inheritance/part02">Inheritance Part02</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/part03">Inheritance Part03</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/java-lang-object">Inheritance Java Lang Object</a>
+    </li>
      
    
     </ul>
