--- a/tonyClass/src/app/java/inheritance/inheritance.component.html
+++ b/tonyClass/src/app/java/inheritance/inheritance.component.html
@@ -12,7 +12,13 @@
       <a class="nav-link" routerLink="/java/inheritance/part03">Inheritance Part03</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/inheritance">Inheritance Example</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/java/inheritance/java-lang-object">Inheritance Java Lang Object</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/this-x-super">This Vs Super</a>
     </li>
      
    
