--- a/tonyClass/src/app/java/inheritance/inheritance.component.html
+++ b/tonyClass/src/app/java/inheritance/inheritance.component.html
@@ -20,6 +20,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/inheritance/this-x-super">This Vs Super</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/inheritance/method-overloading-x-overriding">M. Overloading x Overriding</a>
+    </li>
      
    
     </ul>
