Block and Option Formatting

--- a/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
@@ -16,11 +16,11 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/ooP-Part01/record">Record</a>
     </li>
-    <!--
     <li class="nav-item">
-      <a class="nav-link" routerLink="http-put">Http Put</a>
-      C:\_Java\E_Book_Class_Back_Java17\tonyClass\src\app\java
-    </li> -->
+      <a class="nav-link" routerLink="/java/ooP-Part01/block-and-formatting">Block and Formatting</a>
+    </li>
+   
+  
   </ul>
 
   <div class="container container-fluid image">
