--- a/tonyClass/src/app/java/string/block-and-formatting/block-and-formatting.component.html
+++ b/tonyClass/src/app/java/string/block-and-formatting/block-and-formatting.component.html
@@ -1,11 +1,10 @@
-<p>block-and-formatting works!</p>
 
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button type="button" class="btn btn-outline-light" routerLink="/java/ooP-Part01">
-                    Back to OOP-Part01 Inheritance
+                <button type="button" class="btn btn-outline-light" routerLink="/java/string">
+                    String in Java
                 </button>
             </div>
         </div>
@@ -23,26 +22,27 @@
             </div>
             <h3>Oracles Prints Files</h3>
             <div class="image img-fluid">
-                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/01_Formatting_Options.png" alt="Arquivo Html" />               
+                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/01_Formatting_Options.png" alt="Arquivo Html" />
             </div>
             <div class="image img-fluid">
-                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/02_Formatting_Options.png" alt="Arquivo Html" />               
+                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/02_Formatting_Options.png" alt="Arquivo Html" />
             </div>
             <div class="image img-fluid">
-                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/03_Formatting_Options.png" alt="Arquivo Html" />               
+                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/03_Formatting_Options.png" alt="Arquivo Html" />
             </div>
             <div class="image img-fluid">
-                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/04_Formatting_Options_constructor_summary.png" alt="Arquivo Html" />               
+                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/04_Formatting_Options_constructor_summary.png" alt="Arquivo Html" />
             </div>
             <div class="image img-fluid">
-                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/05_Formatting_Options_Method_summary.png" alt="Arquivo Html" />               
+                <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/05_Formatting_Options_Method_summary.png" alt="Arquivo Html" />
             </div>
             <h3>JAVA Files</h3>
             <div class="image img-fluid">
                 <img src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/05_Main_Class.png" alt="Arquivo Html" />
-               
+
             </div>
         </div>
+
     </div>
 </div>
 
