string-builder-class.component

--- a/tonyClass/src/app/java/string/string.component.html
+++ b/tonyClass/src/app/java/string/string.component.html
@@ -11,6 +11,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/string/string-manipulation-methods">String Manipulation Methods</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/string/string-builder-class">String Builder Class</a>
+    </li>
 
 
   </ul>
