string-builder-class.component done

--- a/tonyClass/src/app/java/string/string-builder-class/string-builder-class.component.html
+++ b/tonyClass/src/app/java/string/string-builder-class/string-builder-class.component.html
@@ -23,7 +23,7 @@
       <h3>PDF File</h3>
       <div class="image">
         <iframe
-          src="./../../../../assets/docs/The_String_Manipulation_Methods.pdf"
+          src="./../../../../assets/docs/The_String_Builder_Class.pdf"
           width="95%"
           height="900px"
           style="border: none"
@@ -32,10 +32,30 @@
       <h3>JAVA Files</h3>
       <div class="image img-fluid">
         <img
-          src="./../../../../assets/images/Java/String/02_String_Methods_Console.png"
+          src="./../../../../assets/images/Java/String/03_String_Builder_Class_MAIN_Class.png"
           alt="Arquivo Html"
         />
-      
+        <img
+          src="./../../../../assets/images/Java/String/03_String_Builder_Class_MAIN2_Class.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/String/03_String_Builder_Console.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/String/03_String_Builder_Console2.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/String/03_String_Builder_Console3.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/String/03_String_Builder_Console4.png"
+          alt="Arquivo Html"
+        />
+
 
     </div>
   </div>
