oop-part02.component

--- a/tonyClass/src/app/java/oop-part02/oop-part02.component.html
+++ b/tonyClass/src/app/java/oop-part02/oop-part02.component.html
@@ -1,25 +1,14 @@
+<p>oop-part02 works!</p>
+
 <div class="main-div">
   <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" routerLink="ooP-Part01"
-        >OOP-Part01</a
-      >
+      <a class="nav-link" routerLink="/java/oop-part02/composition">Composition</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="inheritance"
-        >Inheritance</a
-      >
+      <a class="nav-link" routerLink="/java/oop-part02/encapsulation">Encapsulation</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="string"
-        >String</a
-      >
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="opp-part02"
-        >Opp-Part02</a
-      >
-    </li>
+
 
   </ul>
 
@@ -40,12 +29,12 @@
       </div>
       <div class="row">
         <div class="col-xs-12 local-image">
-          <h2>Java 17</h2>
+          <h2>OOP Part2 Composition, Encapsulation and Polymorphism</h2>
         </div>
         <div class="col-xs-12">
           <div class="local-image">
             <img
-              src="./../../assets/images/BackGround/Java-Development-Kit-17.jpg"
+              src="./../../../assets/images/BackGround/Inheritance.png"
               alt="Arquivo Html"
             />
           </div>
