oop-part02.components

--- a/tonyClass/src/app/java/oop-part02/oop-part02.component.html
+++ b/tonyClass/src/app/java/oop-part02/oop-part02.component.html
@@ -8,6 +8,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/oop-part02/encapsulation">Encapsulation</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/oop-part02/polymorphism">Polymorphism</a>
+    </li>
 
 
   </ul>
