composition.component done

--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -16,8 +16,8 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="opp-part02"
-        >Opp-Part02</a
+      <a class="nav-link " aria-current="page" routerLink="oop-part02"
+        >Oop-Part02</a
       >
     </li>
 
