--- a/tonyClass/src/app/java/oop-part02/composition/composition.component.html
+++ b/tonyClass/src/app/java/oop-part02/composition/composition.component.html
@@ -22,24 +22,67 @@
     </div>
 
     <div class="col-xs-12 picture">
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/javaComposition.png" alt="">
+      </div>
       <h3>PDF File</h3>
       <div class="image">
-      <img src="./../../../../assets/images/BackGround/javaOop-Part02Encapsulation.png" alt="">
-      </div>
-      <div class="image">
         <iframe
-          src="./../../../../assets/docs/Blocks_and_Formatting2.pdf"
+          src="./../../../../assets/docs/Oop-Part02/Polymorphism_Composition.pdf"
           width="95%"
           height="900px"
           style="border: none"
         ></iframe>
       </div>
-      <h3>Oracles Prints Files</h3>
+      <h3> Java Prints Files</h3>
       <div class="image img-fluid">
         <img
-          src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/06_print_do_Console.png"
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/02_Super_Class_Product.png"
           alt="Arquivo Html"
         />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/02B_Super_Class_Product.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/02C_Super_Class_Product.png"
+          alt="Arquivo Html"
+        />
+      </div>
+
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Composition 02</h2>
+    </div>
+
+    <div class="col-xs-12 picture">
+      <h3>PDF File</h3>
+      <div class="image">
+        <iframe
+          src="./../../../../assets/docs/Oop-Part02/Polymorphism_Composition2.pdf"
+          width="95%"
+          height="900px"
+          style="border: none"
+        ></iframe>
+      </div>
+      <h3> Java Prints Files</h3>
+      <div class="image img-fluid">
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/03_Composition02_Examples.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/03_Composition02_Examples02.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/03_Main_Class_composition02.png"
+          alt="Arquivo Html"
+        />
+
       </div>
 
 
