Encapsulation-in-Java done

--- a/tonyClass/src/app/java/oop-part02/composition/composition.component.html
+++ b/tonyClass/src/app/java/oop-part02/composition/composition.component.html
@@ -21,6 +21,7 @@
       <h2>Composition</h2>
     </div>
 
+    <h3>Composition vs Inheritance</h3>
     <div class="col-xs-12 picture">
       <div class="image">
         <img src="./../../../../assets/images/BackGround/javaComposition.png" alt="">
