--- a/tonyClass/src/app/java/oop-part02/encapsulation/encapsulation.component.html
+++ b/tonyClass/src/app/java/oop-part02/encapsulation/encapsulation.component.html
@@ -19,7 +19,6 @@
     </div>
 
     <div class="col-xs-12 picture">
-      <h3>PDF File</h3>
       <div class="image">
         <img
           src="./../../../../assets/images/BackGround/javaOop-Part02Encapsulation.png"
@@ -27,17 +26,70 @@
         />
       </div>
       <div class="image">
+        <img
+          src="./../../../../assets/images/BackGround/Encapsulation-in-Java.jpg.png"
+          alt=""
+        />
+      </div>
+      <h2>Without Encapsulation Ex:</h2>
+      <h3>PDF File</h3>
+      <div class="image">
         <iframe
-          src="./../../../../assets/docs/Blocks_and_Formatting2.pdf"
+          src="./../../../../assets/docs/Oop-Part02/Polymorphism_encapsulation.pdf"
           width="95%"
           height="900px"
           style="border: none"
         ></iframe>
       </div>
-      <h3>Oracles Prints Files</h3>
+      <h3>Java Prints Files</h3>
       <div class="image img-fluid">
         <img
-          src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/06_print_do_Console.png"
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/03_Encapsulation01_Player_Class.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/03_Encapsulation01_Main_Class.png"
+          alt="Arquivo Html"
+        />
+      </div>
+      <h2>With Encapsulation Ex:</h2>
+      <h3>PDF File</h3>
+      <div class="image">
+        <iframe
+          src="./../../../../assets/docs/Oop-Part02/Polymorphism_encapsulation2.pdf"
+          width="95%"
+          height="900px"
+          style="border: none"
+        ></iframe>
+      </div>
+      <h3>Java Prints Files</h3>
+      <div class="image img-fluid">
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/03_Encapsulation01_Player_Class.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/04_Encapsulation02_EnhencedPlayer_Class.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/04_Encapsulation02_Main_Class.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/01_Encapsulation.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/02_Encapsulation.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/02A_Encapsulation.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Oop-Part02/02_Encapsulation/02B_Encapsulation.png"
           alt="Arquivo Html"
         />
       </div>
