casting-with-class.component

--- a/tonyClass/src/app/java/oop-part02/oop-part02.component.html
+++ b/tonyClass/src/app/java/oop-part02/oop-part02.component.html
@@ -11,6 +11,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/oop-part02/polymorphism">Polymorphism</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/oop-part02/casting-class">Casting Class</a>
+    </li>
 
 
   </ul>
