--- a/tonyClass/src/app/java/oop-part02/casting-with-class/casting-with-class.component.html
+++ b/tonyClass/src/app/java/oop-part02/casting-with-class/casting-with-class.component.html
@@ -27,7 +27,7 @@
       <h3>PDF File</h3>
       <div class="image">
         <iframe
-          src="./../../../../assets/docs/Oop-Part02/Polymorphism_Composition.pdf"
+          src="./../../../../assets/docs/Casting-Class/Casting_Class.pdf"
           width="95%"
           height="900px"
           style="border: none"
@@ -36,12 +36,60 @@
       <h3> Java Prints Files</h3>
       <div class="image img-fluid">
         <img
-          src="./../../../../assets/images/Java/Oop-Part02/01_Composition/02_Super_Class_Product.png"
+          src="./../../../../assets/images/Java/Casting_Class/02_Casting_Class_SuperClassMovie.png"
           alt="Arquivo Html"
         />
-
-
-    </div>
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/03_Casting_Class_Adventure_e_MovieClass_Extends.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/03A_Casting_Class_ScienceFiction_Extends.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/04_Casting_Class_Adventure_e_MovieClass_Extends_OverrideMethods.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_MainClass.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass.png"
+          alt="Arquivo Html"
+        />
+        
+        
+        
+      </div>
+      <h3> Casting Ex:</h3>
+      <div class="image img-fluid">
+        <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print2.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print3.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print4.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print5.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Casting_Class/01_Casting_Class_NextMainClass_Print6.png"
+        alt="Arquivo Html"
+      />
+      </div>
   </div>
 </div>
 
