--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -20,6 +20,11 @@
         >Oop-Part02</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="testing-runtime"
+        >Testing RunTime</a
+      >
+    </li>
 
   </ul>
 
