casting diretories fixed

--- a/tonyClass/src/app/java/casting/casting-with-class/casting-with-class.component.html
+++ b/tonyClass/src/app/java/casting/casting-with-class/casting-with-class.component.html
@@ -6,9 +6,9 @@
         <button
           type="button"
           class="btn btn-outline-light"
-          routerLink="/java/oop-part02"
+          routerLink="/java/casting"
         >
-        Opp-Part02 in Java
+        Casting in Java
         </button>
       </div>
     </div>
