--- a/tonyClass/src/app/java/casting/testing-runtime/testing-runtime.component.html
+++ b/tonyClass/src/app/java/casting/testing-runtime/testing-runtime.component.html
@@ -6,9 +6,9 @@
           <button
             type="button"
             class="btn btn-outline-light"
-            routerLink="/java"
+            routerLink="/java/casting"
           >
-             Java
+             Casting in Java
           </button>
         </div>
       </div>
