--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -21,8 +21,8 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="testing-runtime"
-        >Testing RunTime</a
+      <a class="nav-link " aria-current="page" routerLink="casting"
+        >Casting</a
       >
     </li>
 
