Test_run_Time_InstenceOF

--- a/tonyClass/src/app/java/casting/testing-runtime/testing-runtime.component.html
+++ b/tonyClass/src/app/java/casting/testing-runtime/testing-runtime.component.html
@@ -23,7 +23,7 @@
         <h3>PDF File</h3>
         <div class="image">
           <iframe
-            src="./../../../assets/docs/Testing-RunTime/Testing_RunTime_using_InstancedOf_Opertator.pdf"
+            src="./../../../../assets/docs/Testing-RunTime/Testing_RunTime_using_InstancedOf_Opertator.pdf"
             width="95%"
             height="900px"
             style="border: none"
@@ -34,13 +34,57 @@
         <h3>JAVA Files</h3>
         <div class="image img-fluid">
           <img
-            src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/07_Main_class_All_about_the_String.png"
+            src="./../../../../assets/images/Java/"
             alt="Arquivo Html"
           />
           <img
-            src="./../../../../assets/images/Java/Oop-Part01/Block_and_Formating/07A_Main_class_All_about_the_String.png"
-            alt="Arquivo Html"
-          />
+          src="./../../../../assets/images/Java/Casting_Class/02_Casting_Class_SuperClassMovie.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/03_Casting_Class_Adventure_e_MovieClass_Extends.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/03A_Casting_Class_ScienceFiction_Extends.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Casting_Class/04_Casting_Class_Adventure_e_MovieClass_Extends_OverrideMethods.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/01_Testing_RunTime_MainClass.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/02_Testing_RunTime_NextMainClass.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/03_Testing_RunTime_NextMain_Prints.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/03_Testing_RunTime_NextMain_Prints_InstanceOf_method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/04_Testing_RunTime_NextMain_Prints_InstanceOf_method_With_ParthenMatch_Support.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/05_Testing_RunTime_NextMain_Prints_InstanceOf_method_With_ParthenMatch_Support2.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/05_Testing_RunTime_NextMain_Prints_InstanceOf_method_With_ParthenMatch_Support3.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Testing-RunTime/05_Testing_RunTime_NextMain_Prints_InstanceOf_method_With_ParthenMatch_Support4.png"
+          alt="Arquivo Html"
+        />
         </div>
       </div>
     </div>
