--- a/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
@@ -19,8 +19,11 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/ooP-Part01/block-and-formatting">Block and Formatting</a>
     </li>
-   
-  
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/organizing-java-classes">Organizing Java Class</a>
+    </li>
+
+
   </ul>
 
   <div class="container container-fluid image">
