--- a/tonyClass/src/app/java/array/array.component.html
+++ b/tonyClass/src/app/java/array/array.component.html
@@ -5,9 +5,9 @@
         <a class="nav-link" routerLink="/java/array/arrays">Arrays </a>
       </li>
 
-    <!-- <li class="nav-item">
-      <a class="nav-link" routerLink="/java/casting/testing-runtime">Testing RunTime</a>
-    </li> -->
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/array/java-util-array">Java Util Array</a>
+    </li>
 
 
 
@@ -35,7 +35,7 @@
         <div class="col-xs-12">
           <div class="local-image">
             <img
-              src="./../../../assets/images/BackGround/Casting.png"
+              src="./../../../assets/images/BackGround/Array.png"
               alt="Arquivo Html"
             />
           </div>
