--- a/tonyClass/src/app/java/array/java-util-array/java-util-array.component.html
+++ b/tonyClass/src/app/java/array/java-util-array/java-util-array.component.html
@@ -1,1 +1,86 @@
-<p>java-util-array works!</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button
+          type="button"
+          class="btn btn-outline-light"
+          routerLink="/java/array"
+        >
+        Arrays in Java
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Java Util Array</h2>
+    </div>
+
+    <h3>Static Methods Java Util</h3>
+    <div class="col-xs-12 picture">
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Java_Util.png" alt="">
+      </div>
+      <h3>Introduction PDF File</h3>
+        <iframe
+          src="./../../../../assets/docs/Arrays/02_Using_Java_Util_Arrays.pdf"
+          width="95%"
+          height="900px"
+          style="border: none"
+        ></iframe>
+      </div>
+
+
+      <h3> Java Prints Files</h3>
+      <div class="image img-fluid">
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print2_Sort_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print2_Sort2_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+        src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print3_Fill_Method.png"
+        alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print4_CopyOf_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print4_CopyOf2_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print4_CopyOf3_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print4_CopyOf4_Method.png"
+          alt="Arquivo Html"
+        />
+        <img
+          src="./../../../../assets/images/Java/Array/Java_Utils_Arrays/Java_Util_Array_Print4_CopyOf5_Method.png"
+          alt="Arquivo Html"
+        />
+
+      </div>
+
+  </div>
+</div>
+
+
+
