--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -25,6 +25,11 @@
         >Casting</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="array"
+        >Array</a
+      >
+    </li>
 
   </ul>
 
