array_Binary_seach

--- a/tonyClass/src/app/java/array/arrays/arrays.component.html
+++ b/tonyClass/src/app/java/array/arrays/arrays.component.html
@@ -50,6 +50,15 @@
         style="border: none"
         ></iframe>
       </div>
+      <h3>Basic 03 PDF File</h3>
+      <div class="image">
+        <iframe
+        src="./../../../../assets/docs/Arrays/01_Array-Part03.pdf"
+        width="95%"
+        height="900px"
+        style="border: none"
+        ></iframe>
+      </div>
 
       <h3> Java Prints Files</h3>
       <div class="image img-fluid">
