--- a/tonyClass/src/app/java/array/array.component.html
+++ b/tonyClass/src/app/java/array/array.component.html
@@ -8,6 +8,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/array/java-util-array">Java Util Array</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/array/find-a-match-in-array">Seach a Match in Array</a>
+    </li>
 
 
 
