--- a/tonyClass/src/app/java/array/array.component.html
+++ b/tonyClass/src/app/java/array/array.component.html
@@ -11,6 +11,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/array/find-a-match-in-array">Seach a Match in Array</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/array/ref-memory-x-value-type">Ref. Memory x Value Type</a>
+    </li>
 
 
 
