--- a/tonyClass/src/app/java/array/array.component.html
+++ b/tonyClass/src/app/java/array/array.component.html
@@ -14,6 +14,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/array/ref-memory-x-value-type">Ref. Memory x Value Type</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/array/variable-arguments">Variable Arguments</a>
+    </li>
 
 
 
