--- a/tonyClass/src/app/java/array/arrays/arrays.component.html
+++ b/tonyClass/src/app/java/array/arrays/arrays.component.html
@@ -1,14 +1,9 @@
-
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
       <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button
-          type="button"
-          class="btn btn-outline-light"
-          routerLink="/java/array"
-        >
-        Arrays in Java
+        <button type="button" class="btn btn-outline-light" routerLink="/java/array">
+          Arrays in Java
         </button>
       </div>
     </div>
@@ -25,62 +20,44 @@
         <img src="./../../../../assets/images/BackGround/Array2.png" alt="">
       </div>
       <h3>Introduction PDF File</h3>
-        <iframe
-          src="./../../../../assets/docs/Arrays/01_Array_Introduction.pdf"
-          width="95%"
-          height="900px"
-          style="border: none"
-        ></iframe>
-      </div>
-      <h3>Basic 01 PDF File</h3>
-      <div class="image">
-        <iframe
-        src="./../../../../assets/docs/Arrays/01_Array-Part01.pdf"
-        width="95%"
-        height="900px"
-        style="border: none"
-        ></iframe>
-      </div>
-      <h3>Basic 02 PDF File</h3>
-      <div class="image">
-        <iframe
-        src="./../../../../assets/docs/Arrays/01_Array-Part02.pdf"
-        width="95%"
-        height="900px"
-        style="border: none"
-        ></iframe>
-      </div>
-      <h3>Basic 03 PDF File</h3>
-      <div class="image">
-        <iframe
-        src="./../../../../assets/docs/Arrays/01_Array-Part03.pdf"
-        width="95%"
-        height="900px"
-        style="border: none"
-        ></iframe>
-      </div>
+      <iframe src="./../../../../assets/docs/Arrays/01_Array_Introduction.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+    <h3>Basic 01 PDF File</h3>
+    <div class="image">
+      <iframe src="./../../../../assets/docs/Arrays/01_Array-Part01.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+    <h3>Basic 02 PDF File</h3>
+    <div class="image">
+      <iframe src="./../../../../assets/docs/Arrays/01_Array-Part02.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+    <h3>Basic 03 PDF File</h3>
+    <div class="image">
+      <iframe src="./../../../../assets/docs/Arrays/01_Array-Part03.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
 
-      <h3> Java Prints Files</h3>
-      <div class="image img-fluid">
-        <img
-          src="./../../../../assets/images/Java/Array/00_Array_Basic_class.png"
-          alt="Arquivo Html"
-        />
-        <img
-          src="./../../../../assets/images/Java/Array/00_Array_Basic_class.png"
-          alt="Arquivo Html"
-        />
-        <img
-          src="./../../../../assets/images/Java/Array/01_Array_to_String.png"
-          alt="Arquivo Html"
-        />
-        <img
-          src="./../../../../assets/images/Java/Array/02_Array_Object.png"
-          alt="Arquivo Html"
-        />
-      </div>
+    <h3> Java Prints Files</h3>
+    <div class="image img-fluid">
+      <img src="./../../../../assets/images/Java/Array/00_Array_Basic_class.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array/00_Array_Basic_class.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array/01_Array_to_String.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array/02_Array_Object.png" alt="Arquivo Html" />
+    </div>
+
+    <h3>Basic 04 Array Reverse PDF File</h3>
+    <div class="image">
+      <iframe src="./../../../../assets/docs/Arrays/01_Array-Part03_Reverse_Array.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+    <h3> Java Prints Files</h3>
+    <div class="image img-fluid">
+      <img src="./../../../../assets/images/Java/Array/06_Array_Reverse/01_Main_Class.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array/06_Array_Reverse/01A_Main_Class.png" alt="Arquivo Html" />
+      
+    </div>
 
   </div>
 </div>
-
-
