--- a/tonyClass/src/app/java/array/array.component.html
+++ b/tonyClass/src/app/java/array/array.component.html
@@ -17,6 +17,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/array/variable-arguments">Variable Arguments</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/array/dimentional-arrays">Dimention Arrays</a>
+    </li>
 
 
 
