--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -2,24 +2,9 @@
 <div class="main-div">
   <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/java/array/arrays">Arrays </a>
+        <a class="nav-link" routerLink="/java/array/array-list">Arrays List</a>
       </li>
 
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/java/array/java-util-array">Java Util Array</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/java/array/find-a-match-in-array">Seach a Match in Array</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/java/array/ref-memory-x-value-type">Ref. Memory x Value Type</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/java/array/variable-arguments">Variable Arguments</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/java/array/dimension-arrays">Dimension Arrays</a>
-    </li>
 
 
 
@@ -42,7 +27,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 local-image">
-          <h2>Arrays</h2>
+          <h2>Arrays List</h2>
         </div>
         <div class="col-xs-12">
           <div class="local-image">
@@ -56,6 +41,7 @@
     </main>
   </div>
 </div>
+
 
 
 
