--- a/tonyClass/src/app/_body/body.component.css
+++ b/tonyClass/src/app/_body/body.component.css
@@ -16,7 +16,7 @@ span {
 
 .image {
   width: 100%;
-  height: 98vh;
+  min-height: 86vh;
   background-image: url('./../../assets/images/BackGround/java2_17.png') !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
