--- a/tonyClass/src/app/java/array/dimension-arrays/dimension-arrays.component.html
+++ b/tonyClass/src/app/java/array/dimension-arrays/dimension-arrays.component.html
@@ -15,10 +15,10 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h2>Two Dimention Array</h2>
+      <h2>Two Dimension Array</h2>
     </div>
 
-    <h3>Two Dimention</h3>
+    <h3>Two Dimension</h3>
     <div class="col-xs-12 picture">
       <div class="image">
         <img
@@ -129,10 +129,10 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <h2>Multi Dimention Array</h2>
+        <h2>Multi Dimension Array</h2>
       </div>
 
-      <h3>MultiDimention</h3>
+      <h3>Multi Dimension</h3>
       <div class="col-xs-12 picture">
         <div class="image">
           <img
