array-list-example.component

--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -30,6 +30,11 @@
         >Array</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="array-list"
+        >Array-List</a
+      >
+    </li>
 
   </ul>
 
