--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -2,7 +2,10 @@
 <div class="main-div">
   <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/java/array/array-list">Arrays List</a>
+        <a class="nav-link" routerLink="/java/array/arraylist">Arrays List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/java/array/array-x-arraylist">Array vs Arrays List</a>
       </li>
 
 
@@ -32,7 +35,7 @@
         <div class="col-xs-12">
           <div class="local-image">
             <img
-              src="./../../../assets/images/BackGround/Array.png"
+              src="./../../../assets/images/BackGround/Array-List2.png"
               alt="Arquivo Html"
             />
           </div>
