--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -2,10 +2,10 @@
 <div class="main-div">
   <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/java/array/arraylist">Arrays List</a>
+        <a class="nav-link" routerLink="/java/arraylist/arraylist-examples">Arrays List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/java/array/array-x-arraylist">Array vs Arrays List</a>
+        <a class="nav-link" routerLink="/java/array-x-arraylist">Array vs Arrays List</a>
       </li>
 
 
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 local-image">
-          <h2>Arrays List</h2>
+          <h2><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/ArrayList.html" style="text-decoration: none;"> Arrays List</a> </h2>
         </div>
         <div class="col-xs-12">
           <div class="local-image">
