--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -31,8 +31,8 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="array-list"
-        >Array-List</a
+      <a class="nav-link " aria-current="page" routerLink="arraylist"
+        >ArrayList</a
       >
     </li>
 
